--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
 
         <div class="three">
-            <p>Today! It's your Birthday!</p>
+            <p>Today! Is your Birthday!</p>
         </div>
 
         <div class="four">
@@ -44,7 +44,7 @@
 
         <div class="five">
             <p class="idea-1">Mở quà anh coi có gì hấp dẫn nho</p>
-            <p class="idea-2">Unbox từ từ thoi nhoo :( Quay cho anh xem cũm được ahihi :D </p>
+            <p class="idea-2">Unbox từ từ thoi nhoo! Quay cho anh xem cũm được ahihi :D </p>
             <p class="idea-3">
                Anh nghĩ hôm nay anh phải làm 1 cái gì đó <br>
                 <strong>Đặc Biệt</strong>
@@ -53,7 +53,7 @@
             <p class="idea-4">Bởi vì,</p>
             <p class="idea-5">
                 Em rất Đặc Biệt!
-                <span>❤️</span>
+                <span>:)</span>
             </p>
             <p class="idea-6">
                 <span>S</span>
