--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <div class="five">
             <p class="idea-1">Mở quà anh coi có gì hấp dẫn nho</p>
-            <p class="idea-2">Unbox từ từ thoi nhoo! Quay cho anh xem cũm được ahihi :D </p>
+            <p class="idea-2">Mong là Pé Như sẽ thích 😅 Anh tự làm đó nho 😢 </p>
             <p class="idea-3">
                Anh nghĩ hôm nay anh phải làm 1 cái gì đó <br>
                 <strong>Đặc Biệt</strong>
